adjustes input id pokemon

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
               ID do Pokemon:
               <div class="input-group mb-3">
                 <input
+                  min="1"
+                  max="798"
+                  placeholder="1 a 798"
                   required
                   type="number"
                   class="
